<resources>
    <string name="app_name">Proyecto</string>
    <string name="txtUsuari">Usuario</string>
    <string name="lblUsuari">Correo</string>
    <string name="txtPassword">Contraseña</string>
    <string name="etPass">Contraseña</string>
    <string name="btnLogin">Login</string>
    <string name="txtNewUser">Nuevo usuario? ¡registrate!</string>
    <string name="btnRegistre">Registrarme</string>
    <string name="title_activity_navigation_drawer" translatable="false">navigationDrawer</string>
    <string name="navigation_drawer_open">Abrir navigation drawer</string>
    <string name="navigation_drawer_close">Cerrar navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Configuracion</string>
    <string name="slEjer">Porfavor, selecciona el entrenamiento que quieras hacer</string>
    <string name="btnCIdioma" translatable="false">Cambiar idioma</string>
    <string name="lblCorreo">Correo</string>
    <string name="lblConfContra">Confirmar la contraseña</string>
    <string name="lblNombre">Nombre</string>
    <string name="lblApellidos">Apellidos</string>
    <string name="data" translatable="false">data</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_navegacion" translatable="false">navegacion</string>
    <string name="txtExiste">¿Tienes ya cuenta registrada?</string>
    <string name="guardar">Guardar</string>

    <string name="fecha">Fecha</string>
    <string name="opinion_tView">Opinion</string>
    <string name="ejercicio_tView">Ejercicio</string>
    <string name="ejercicio">ejercicio</string>
    <string name="opinion">opinion</string>
    <string name="bienvenido_a_t25">Bienvenido a T25</string>
    <string name="title_activity_v_cardio" translatable="false">vCardio</string>
    <string name="buffering_string" translatable="false">buffering</string>
    <string name="cardio" translatable="false">Cardio</string>
    <!-- TODO: strings que referencian al codigo -->
    <string name="eCorreo">Introduce un correo.</string>
    <string name="econtra">Introduce una contraseña.</string>
    <string name="noCoincide">La contraseña no coincide.</string>
    <string name="errorCorreo">correo no encontrado.</string>
    <string name="NnoValido">Nombre no valido</string>
    <string name="errorApellidos">Apellido/s no valido/s.</string>
    <string name="Success">Añadido correctamente.</string>
    <string name="ErrorCorreo">Correo invalido.</string>
    <string name="CorreuUsado">Correo en uso.</string>
    <string name="ErrorUsuaRegistro">El usuario es demasiado corto.</string>
    <string name="ContrasenyasDistintas">Las contraseñas no coinciden.</string>
    <string name="ContrasenyaCorta">La contraseña es demasiado corta(minimo 8 caracteres).</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="ModificarPerfil" translatable="false">Modificar Perfil</string>
    <string name="ErrorLogin">El correo o la contraseña no son correctos</string>
    <string name="Compartir">Compartir nuestra app</string>
    <string name="compartirTex">Hola! he descubierto esta app que te puede molar!</string>
</resources>
