<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Gris"
    tools:context=".MainActivity">

    <animation-list xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/animation"
        android:layout_width="174dp"
        android:layout_height="68dp"
        android:layout_marginStart="109dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="67dp"
        android:oneshot="false"
        app:layout_constraintBottom_toTopOf="@+id/etUsuari"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <item
            android:drawable="@drawable/1"
            android:duration="25" />

        <item
            android:drawable="@drawable/2"
            android:duration="25" />

        <item
            android:drawable="@drawable/3"
            android:duration="25" />

        <item
            android:drawable="@drawable/4"
            android:duration="25" />

        <item
            android:drawable="@drawable/5"
            android:duration="25" />

        <item
            android:drawable="@drawable/6"
            android:duration="25" />

        <item
            android:drawable="@drawable/7"
            android:duration="25" />

        <item
            android:drawable="@drawable/8"
            android:duration="25" />

        <item
            android:drawable="@drawable/9"
            android:duration="25" />

        <item
            android:drawable="@drawable/10"
            android:duration="25" />

        <item
            android:drawable="@drawable/11"
            android:duration="25" />

        <item
            android:drawable="@drawable/12"
            android:duration="25" />

        <item
            android:drawable="@drawable/13"
            android:duration="25" />

        <item
            android:drawable="@drawable/14"
            android:duration="25" />

        <item
            android:drawable="@drawable/15"
            android:duration="25" />

        <item
            android:drawable="@drawable/16"
            android:duration="25" />

        <item
            android:drawable="@drawable/17"
            android:duration="25" />

    </animation-list>

    <TextView
        android:id="@+id/tvUsuari"
        android:layout_width="67dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="268dp"
        android:layout_marginEnd="8dp"
        android:text="@string/lblCorreo"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/etUsuari"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etUsuari"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="80dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvUsuari"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/tvPass"
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="8dp"
        android:text="@string/txtPassword"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/etPass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUsuari" />

    <EditText
        android:id="@+id/etPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="84dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvPass"
        app:layout_constraintTop_toBottomOf="@+id/etUsuari"
        tools:targetApi="o" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:background="@color/Blanco"
        android:onClick="onClick"
        android:text="@string/btnLogin"
        app:layout_constraintBottom_toTopOf="@+id/txtNewUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPass"
        app:layout_constraintVertical_chainStyle="spread"
        tools:text="@string/btnLogin" />

    <TextView
        android:id="@+id/txtNewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/txtNewUser"
        app:layout_constraintBottom_toTopOf="@+id/btnRegistre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        tools:text="@string/txtNewUser" />

    <Button
        android:id="@+id/btnRegistre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/Blanco"
        android:onClick="onClickRegistre"
        android:text="@string/btnRegistre"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNewUser"
        app:layout_constraintVertical_bias="0.2"
        tools:text="@string/btnRegistre" />

    <Button
        android:id="@+id/btnIdioma"
        android:layout_width="77dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/Blanco"
        android:onClick="onClickIdioma"
        android:text="@string/btnCIdioma"
        app:layout_constraintBottom_toTopOf="@+id/txtNewUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0.578" />

</android.support.constraint.ConstraintLayout>